// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render Button with custom className 1`] = `
<div>
  <button
    class="button custom-class-name "
  >
    Label
  </button>
</div>
`;

exports[`Button should render disabled tertirary Button 1`] = `
<div>
  <button
    class="button  button--tertirary"
    disabled=""
  >
    Label
  </button>
</div>
`;

exports[`Button should render primary Button 1`] = `
<div>
  <button
    class="button  button--primary"
  >
    Label
  </button>
</div>
`;

exports[`Button should render secondary Button with destructive style 1`] = `
<div>
  <button
    class="button  button--secondary-destructive"
  >
    Label
  </button>
</div>
`;
